# agbot

./: .dockerignore  .env  .gitignore  AGENTS.md  ARCHITECTURE_TECHNICAL.md  CLAUDE.md  COMPREHENSIVE_ANALYSIS_SUMMARY.md  Cargo.toml  Cargo.toml.demo  Cross.toml  Dockerfile  README.md  WATER_DETECTION_IMPLEMENTATION.md  demo-terrain.sh  demo_output.py  dev-start.sh  docker-compose.yml  geo_hub.db  justfile  run_demo.sh  vision-misison.md  water_demo.py  water_demo.rs
data_collector/: Cargo.toml
data_collector/src/: export.rs  indexing.rs  lib.rs  multispectral.rs  rplidar.rs  simulated_capture.rs  storage.rs
drone_simulator/: Cargo.toml
drone_simulator/src/: communication.rs  environment.rs  flight_controller.rs  lib.rs  main.rs  physics.rs  sensors.rs
flight_sim_cpp/: .gitignore  CMakeLists.txt  README.md  RUNBOOK.md
flight_sim_cpp/calibration/: cheap_gps_b2.toml  ideal.toml  lidar_a3.toml  multispectral_camera.toml  noisy_imu.toml  rtk_gps_a1.toml
flight_sim_cpp/config/: CMakeLists.txt
flight_sim_cpp/config/src/: Params.cpp  Toml.cpp
flight_sim_cpp/config/tests/: config_tests.cpp
flight_sim_cpp/demo/: world_demo_main.cpp
flight_sim_cpp/include/agbot_flight_sim/: CoordinationPreview.hpp  DeterministicRegression.hpp  DeterministicRunner.hpp  DroneSimulation.hpp  FaultInjection.hpp  GeoTerrain.hpp  HudTelemetry.hpp  LabeledSyntheticDataset.hpp  LidarSimulator.hpp  LocationScenario.hpp  Mission.hpp  MissionLoader.hpp  MissionPreview.hpp  MissionValidation.hpp  MultispectralCamera.hpp  RayTracedCamera.hpp  Renderer.hpp  SafetyRules.hpp  SensorModel.hpp  (+9 more)
flight_sim_cpp/nav/: CMakeLists.txt
flight_sim_cpp/render/: CMakeLists.txt
flight_sim_cpp/samples/: sample_field_loop.json
flight_sim_cpp/src/: CoordinationPreview.cpp  DeterministicRegression.cpp  DeterministicRunner.cpp  DroneSimulation.cpp  FaultInjection.cpp  GeoTerrain.cpp  HudTelemetry.cpp  LabeledSyntheticDataset.cpp  LidarSimulator.cpp  LocationScenario.cpp  MissionLoader.cpp  MissionPreview.cpp  MissionValidation.cpp  MultispectralCamera.cpp  RayTracedCamera.cpp  SafetyRules.cpp  SceneSynthesis.cpp  SensorModel.cpp  SimulationOps.cpp  TelemetryRecorder.cpp  TelemetryReplay.cpp  TelemetryVideoStream.cpp  TraceDiff.cpp  TwinBackend.cpp  TwinContractV1.cpp  agbot_sim_main.cpp  headless_main.cpp  macos_opengl_viewer.mm  mission_bridge_main.cpp
flight_sim_cpp/terrain_engine/: CMakeLists.txt
flight_sim_cpp/tests/: simulation_tests.cpp
flight_sim_cpp/vehicles/: CMakeLists.txt
flight_sim_cpp/worldgen/: CMakeLists.txt
geo_hub/: Cargo.toml  README.md
geo_hub/src/: config.rs  db.rs  error.rs  ingest.rs  landsat.rs  lib.rs  main.rs  mobile_app.html  product_catalog.rs  routes.rs  server.rs  shapefile.rs  state.rs
geo_hub/tests/: products_api.rs
geo_viewer/: Cargo.toml  README.md
geo_viewer/src/: app.rs  main.rs  state.rs
ground_station_ui/: Cargo.toml
ground_station_ui/src/: cli_interface.rs  fleet_operations.rs  lib.rs  link_client.rs  main.rs  map_state.rs  message_dispatch.rs  operator_actions.rs  operator_advisory.rs  operator_session.rs  web_server.rs
imagery_processor/: COMPREHENSIVE_ANALYSIS_README.md  Cargo.toml  README.md
imagery_processor/src/: analysis_core.rs  drought_analyzer.rs  lib.rs  main.rs  multi_temporal_analyzer.rs  ndwi.rs  vectorization.rs  vegetation_analysis.rs  vegetation_analyzer.rs  water_analyzer.rs
imagery_processor/tests/: pipelines.rs
lidar_mapper/: Cargo.toml
lidar_mapper/_enhancements/: e1.md
lidar_mapper/_tasks/: tasks.md
lidar_mapper/src/: lib.rs  main.rs
mission_control/: Cargo.toml
mission_control/src/: api_server.rs  lib.rs  main.rs  mavlink_client.rs  websocket_server.rs
mission_planner/: Cargo.toml  README.md
mission_planner/frontend/: README.md  package-lock.json  package.json
mission_planner/samples/: sample_mission.json
mission_planner/scripts/: init.sql  setup_database.sh
mission_planner/src/: abort_recovery.rs  adaptive_replan.rs  api.rs  automated_failsafe.rs  autonomous_execution.rs  database.rs  database.rs.bak  dispatch_safety.rs  flight_path.rs  guarded_dispatch.rs  lib.rs  main.rs  mavlink_integration.rs  mission_audit.rs  mission_export.rs  mission_optimizer.rs  preflight_checklist.rs  survey_template.rs  telemetry.rs  waypoint.rs  weather_integration.rs  websocket_handler.rs
mission_planner/tests/: postgres_integration.rs
multi_drone_control/: Cargo.toml
multi_drone_control/src/: collision_avoidance.rs  coordinated_approval.rs  coordination.rs  lib.rs  mission_assignment.rs  swarm.rs  swarm_command.rs  synchronized_survey.rs
ndvi_processor/: Cargo.toml  README.md
ndvi_processor/src/: analysis_schemas.rs  burn_analyzer.rs  lib.rs  main.rs  water_monitor.rs
post_processor/: Cargo.toml
post_processor/src/: evidence.rs  findings_export.rs  grower_report.rs  index_anomaly.rs  index_trend.rs  index_vegetation_classification.rs  lib.rs  lidar_analysis.rs  lidar_change.rs  ndvi_analysis.rs  product_anomalies.rs  report_generator.rs  thermal_analysis.rs  thermal_spots.rs  vegetation_summary.rs  zonal_statistics.rs  zone_delineation.rs  zone_recommendations.rs
sensor_collector/: Cargo.toml
sensor_collector/src/: camera_reader.rs  lib.rs  lidar_reader.rs  main.rs
shared/: Cargo.toml
shared/fixtures/: twin_contract_v1_command_telemetry.json
shared/src/: config.rs  control_plane.rs  error.rs  fleet_alerts.rs  lib.rs  logging.rs  observability.rs  plugin_extensions.rs  resource_budget.rs  schemas.rs  secrets.rs  twin_contract_v1.rs  types.rs
simulator/: Cargo.toml  FLIGHT_SIMULATOR_UI_INTEGRATION.md  LIDAR_SIMULATOR.md  README.md  visualizer_config.toml
simulator/src/: app.rs  app_state.rs  camera.rs  communication.rs  components.rs  drone_controller.rs  earth_textures.rs  geodesy.rs  globe_ui.rs  globe_view.rs  ground_vehicle.rs  hud.rs  hud_new.rs  input_handler.rs  lidar_controls.rs  location_database.rs  main.rs  main_menu.rs  map_loader.rs  osm.rs  procedural_textures.rs  resources.rs  systems.rs  terrain.rs  ui.rs
simulator/tasks/: phase_breakdown.md  progress_phase1.md  progress_phase2.md
(+508 files in other folders)
