[workspace]
members = [
    "mission_planner",
    "drone_simulator",
    "sensor_overlay_engine",
    "multi_drone_control",
    "data_collector",
    "post_processor",
    "shared",
    "simulator",
    "lidar_mapper",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenvy = "0.15"
config = "0.14"

# Network/WebSocket/gRPC
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tonic = "0.10"
tonic-build = "0.10"
prost = "0.12"

# Math/Linear algebra
nalgebra = { version = "0.32", features = ["serde-serialize"] }
ndarray = "0.15"

# Image processing
image = { version = "0.24", features = ["png", "jpeg"] }
imageproc = "0.23"

# Web frameworks
warp = "0.3"

# Serial communication
serialport = "4.2"
tokio-serial = "5.4"

# MAVLink
mavlink = "0.12"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Channels
flume = "0.11"

# File handling
walkdir = "2.0"

# Random number generation
rand = "0.8"

# Geospatial/GIS
geo = "0.26"
geojson = "0.24"

# Simulation & Physics
rapier3d = "0.17"

# Data processing
csv = "1.3"
polars = { version = "0.35", features = ["lazy"] }

# 3D Visualization & Game Engine
bevy = { version = "0.14", features = ["dynamic_linking"] }
bevy_egui = "0.28"
bevy-inspector-egui = "0.25"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0
