[package]
name = "data_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
polars = { workspace = true }

# Internal dependencies
shared = { path = "../shared" }

# Specific dependencies
walkdir = { workspace = true }
