[package]
name = "drone_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tokio-tungstenite = { workspace = true }
nalgebra = { workspace = true }
rand = { workspace = true }
rapier3d = { workspace = true }

# Internal dependencies
shared = { path = "../shared" }

# Specific dependencies
futures-util = "0.3"
