[package]
name = "ground_station_ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ground_station_ui"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = "0.21"
url = "2.4"
futures-util = "0.3"
