[package]
name = "imagery_processor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "imagery_processor"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
rand = { workspace = true }

[features]
default = []
# Enable GDAL-based GeoTIFF output when available
gdal-io = ["gdal"]

[dependencies.gdal]
version = "0.16"
optional = true
