[package]
name = "lidar_mapper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lidar_mapper"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
nalgebra = { workspace = true }
image = { workspace = true }
futures = "0.3"
rand = "0.8"
indicatif = "0.17"
