[package]
name = "mission_control"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mission_control"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }
mavlink = { workspace = true }
serialport = { workspace = true }
tokio-serial = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
flume = { workspace = true }
futures-util = "0.3"
rand = "0.8"
