[package]
name = "mission_planner"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
geo = { workspace = true }
geojson = { workspace = true }

# Internal dependencies
shared = { path = "../shared" }

# Specific dependencies
reqwest = { version = "0.11", features = ["json"] }
