[package]
name = "mission_planner"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true, features = ["ws"] }
geo = { workspace = true }
geojson = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# Internal dependencies
shared = { path = "../shared" }

# Specific dependencies
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
mavlink = { workspace = true }

# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

[dev-dependencies]
axum-test = "14.0"
