[package]
name = "ndvi_processor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ndvi_processor"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
