[package]
name = "ndvi_processor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ndvi_processor"
path = "src/main.rs"

[[bin]]
name = "water_monitor"
path = "src/water_monitor.rs"

[dependencies]
shared = { path = "../shared" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
clap = { version = "3.2", features = ["derive"] }
ndarray = "0.15"
rand = "0.8"
tracing-subscriber = "0.3"
image = "0.24"
